Changes in Caudium 1.3 since Caudium 1.3.14
-------------------------------------------
- Headline module has been removed. This was mostly a hack from Headline
  module from David Hedbor (see roxen community for that) and it is too
  buggy and not really clean.
- Caudium.so pike glue in now _Caudium. A Pike module library is here to handle
  all functions that are coded in C or in Pike or that uses both things.

Changes in Caudium 1.3 since Caudium 1.2.1
------------------------------------------

- Fixed a bug in the new compression module : when using things like <insert>
  in RXML pages the data was compressed twice.
- <accessed> tag is now handled in a separate module. To have old behavior,
  use "Accessed Tag Counter: Old version", other supports Memory, SQL, FileDB
  are also available.
- mod_caucho support for Resin updated to support multiple instances of resin
  and load balancing among them. Also added support for RXML parsing of output.
- Java Servlet module updated to Servlet API 2.2, handles file extensions 
  and allows output to be RXML parsed.
- Added in etc/include/performance.h a define that allow administrator
  to force load all configurations and modules at the starting of Caudium.
  Note this is not recommanded if you have thousands of virtuals servers.
  You can use this with ./start script on a runtime : -DLOAD_CONFIGS_STARTUP
- Apache/NSCA SSI tags are now handled into a separate module called
  SSI Compat Tags (ssi_compat.pike). Don't forget to add this to your
  configuration interface if you need this support...
- Fix pluging path for rimage module.
- modules/scripting/oldcgi.pike and modules/scripting/fcgi.pike are now 
  deprecated. For FastCGI support you can use now fastcgi.pike that work
  mutch better than the old one.
- Fix submitted in caudium_general ml about corrupted Accessed db.
- Fix for sf bug #634688: Backtrace with cache and start as user.
- Fixed error in setools.pike regarding user agent & regexp