@@ -1,5 +1,11 @@
 Changes in Caudium 1.3 since Caudium 1.3.14
 -------------------------------------------
+- Added some wrappers to parse_html() and parse_html_lines() that are
+  called Caudium.parse_html() and Caudium.parse_html_lines(). This wrapper
+  is Wide Strings complian (eg >8 bits compatible) and is set per default.
+  If you have bugs with it, please send it to bugs@caudium.info. You can
+  use the old parser from spider module (Pike) by starting Caudium with
+  OLD_SPIDER define set.
 - Headline module has been removed. This was mostly a hack from Headline
   module from David Hedbor (see roxen community for that) and it is too
   buggy and not really clean.
